plang/testing/logs/false-incorrect/87/program87.p.p
p6r2 :- ((nATyA)), (uTJk irff l), gO (N4I) (SJRa), px (dPe60 (WRwvB) (IXq) (cI4C (mEty K (C)) FKg) (Qv)), zPdgL M; (abb7 eX (XF13s) (Y5N)); (uXd (r Z EH) (i (Q) (o HqV (CBQNE) ik5Pa) (NXHL) (G0)) (n3U (v2tYy L))); kHSS fdKm, kG (J) (dyT eAi) BRjaO, j FUISa; up (BYf); icky HVgn (T); v kK (wpni Y5) (km (zKa (ZJHwh) Rk (CzI)) A4k), (bKcC).

xUi (XGK).

oq (p NQsSf (R) (cdS) R) k z q.
i (yvqn rxEmV x (G) (qgS N9u4 (Wzb) (n2) L4Y)) (x) :- (yfmIC YKg (Kuw) si).

fn338 Z VyJ68 :- ((((kgQu ilT rcWqI (G) bOoJ; gXYBX)))).

vZ (X4w) (NA8w) (Ne).

uN zuxb OFsB (h O U6N (C) (p (htWk9 WPGg) cz)) D :- ekMP, m8Jh (l2M pkz eJx8X) gb.
u2s (G) :- ((bV HWL8u ED)); (la (HFxr) r QbTT3, g, (nzq3 (XGfzu) (HRRJ)); uA).

spVFD (F) u M.
jAOL Yr V.

wOqF (iFpeL k (lMV) (zd)) (s (F) (Q6iUD)).

hNX h24JH (JQOtX).
lQW8 (ibf (nCbcA q z) (mAYDC (c69 (J0j) (Z) (l (f8G3 ZLl8 (Re8a)) J1RO (YU))) (XE9M) (aY (ycV q ufQnI (O) rIdD) H))) YEqc LxVdK (P1UI) :- iISd (D4Q) ZUMX.
p (bU1Nl bk IPLP) (Goll) (YE) :- jAm.


p (fR) zaO.
kw3.

fYVe (xqLs) (H).


? skbP7 (GOLw) x6.


